[package]

name = "phd"
version = "0.1.0"
description = "Personal Health Daemon"
authors = ["András Szalai <andrew@bandipapa.com>"]
edition = "2021"

[dependencies]

async-trait = "0.1.83"
bluer = {version = "0.17.3", features = ["bluetoothd", "serde"]}
chrono = "0.4.38"
clap = {version = "4.5.20", features = ["cargo", "derive"]}
config = {version = "0.14.0", features = ["yaml"]}
futures = "0.3.31"
hex = {version = "0.4.3", features = ["serde"]}
reqwest = "0.12.8"
serde = "1.0.210"
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"]}
tzfile = "0.1.3"
uuid = "1.11.0"
